# Color-Experiment

./: .gitignore  README.md  pyproject.toml
scripts/: description_space_report.py  direction_characterization.py  direction_experiment_suite.py  geometry_direction_report.py  geometry_pca_report.py
src/color_latent_lab/: __init__.py  __main__.py  analysis_common.py  cli.py  color_formats.py  color_palette.py  custom_sae.py  experiment.py  format_analysis.py  hf.py  logit_lens.py  model_utils.py  probe_compare.py  run_support.py  sae_geometry.py  word_lists.py  word_set_sae.py  workflow_common.py
tests/: test_custom_sae.py  test_direction_scripts.py  test_experiment.py  test_sae_geometry.py  test_word_set_sae.py
word_lists/: english_color_words.txt  english_color_words_unambiguous.txt
