[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "color-latent-lab"
version = "0.1.0"
description = "Standalone mechanistic interpretability experiments for color latents in causal LMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "transformers>=4.49",
  "safetensors>=0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
]

[project.scripts]
color-latent-lab = "color_latent_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
